backup_individuals/sjeng/use_undefined_identifier/c0/nk_attacked
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/attacks.c:750:8: error: use of undeclared identifier 'nk_attacked_bishop_o'
ndir = nk_attacked_bishop_o[i]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/attacks.c:767:12: error: use of undeclared identifier 'nk_attacked_knight_o'
if ( board[nk_attacked_knight_o[ia] + square] == 3 ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/attacks.c:772:9: error: use of undeclared identifier 'nk_attacked_rook_o'
ndira = nk_attacked_rook_o[ib]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/attacks.c:789:9: error: use of undeclared identifier 'nk_attacked_bishop_o'
ndirb = nk_attacked_bishop_o[ic]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/attacks.c:806:12: error: use of undeclared identifier 'nk_attacked_knight_o'
if ( board[nk_attacked_knight_o[id] + square] == 4 ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/attacks.c:811:9: error: use of undeclared identifier 'nk_attacked_rook_o'
a_sqc = nk_attacked_rook_o[ie] + square; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/attacks.c:818:10: error: use of undeclared identifier 'nk_attacked_rook_o'
a_sqc += nk_attacked_rook_o[ie]; 
         ^
7 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/nk_attacked/src/obj/attacks.o] Error 1
